Experiment with xerial snappy