@@ -18,7 +18,12 @@ plugins {
 }
 
 group 'org.parquet.android'
-version '1.0-SNAPSHOT'
+version '1.0'
+
+// This task adds jdk internal module to this library, so we can access its 'Unsafe' class.
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs = ['--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED']
+}
 
 dependencies {
     api("blue.strategic.parquet:parquet-floor:$parquet_floor_version") {
@@ -31,8 +36,8 @@ dependencies {
 jar {}
 
 shadowJar {
-    dependencies {
-        exclude(dependency("org.xerial.snappy:snappy-java:1.1.8.3"))
-    }
+//    dependencies {
+//        exclude(dependency("org.xerial.snappy:snappy-java:1.1.8.3"))
+//    }
 }
 
